--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
       - apt-get install -y maven
   pre_build:
     commands:
-      - curl -sSL https://download.sourceclear.com/ci.sh | bash
+      - DEBUG=1 curl -sSL https://download.sourceclear.com/ci.sh | bash
   build:
     commands:
       - mvn clean install
